--- a/index.html
+++ b/index.html
@@ -89,12 +89,8 @@
         Over-the-board chess AI opponent (Python)
       </li>
       <li>
-        <strong><a href="https://github.com/eddiesc03/comicWorld">comicWorld</a></strong><br>
+        <strong><a href="https://eddiesc03.github.io/comicWorld/">comicWorld</a></strong><br>
         Random comics and creative sketches (Python)
-      </li>
-      <li>
-        <strong><a href="https://github.com/eddiesc03">GitHub Profile</a></strong><br>
-        My GitHub profile and contributions
       </li>
     </ul>
   </section>
