--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
     <ul>
       <li>
         <strong><a href="https://github.com/eddiesc03/chessbot">chessbot</a></strong><br>
-        Over-the-board chess AI opponent (Python)
+        Over-the-board chess AI opponent
       </li>
       <li>
         <strong><a href="https://eddiesc03.github.io/comicWorld/">comicWorld</a></strong><br>
-        Random comics and creative sketches (Python)
+        Random comics and creative sketches
       </li>
     </ul>
   </section>
