Your commit message

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <body>
   <header>
     <!-- Make sure profile pic.png is in the repo root -->
-    <img src="images/profile pic.png" alt="Edward Collins Profile Picture">
+    <img src="profile pic.png" alt="Edward Collins Profile Picture">
     <h1>Edward Collins</h1>
     <p>he/him • Liverpool • <a href="mailto:eddiesc03@gmail.com">eddiesc03@gmail.com</a> • <a href="mailto:sgecoll4@liverpool.ac.uk">sgecoll4@liverpool.ac.uk</a></p>
   </header>
@@ -85,15 +85,15 @@
   <h2>University Projects</h2>
   <div>
     <h3>Year 1 Autonomous car project</h3>
-    <img src="images/year1.jpg" alt="Year 1 Project" width="400">
+    <img src="year1.jpg" alt="Year 1 Project" width="400">
   </div>
   <div>
     <h3>Year 2 Whac a mole project</h3>
-    <img src="images/year2.jpg" alt="Year 2 Project" width="400">
+    <img src="year2.jpg" alt="Year 2 Project" width="400">
   </div>
   <div>
     <h3>Year 3 Over the board chess AI opponent (ongoing) </h3>
-    <img src="images/year3.jpg" alt="Year 3 Project" width="400">
+    <img src="year3.jpg" alt="Year 3 Project" width="400">
   </div>
 </section>
 
