--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
   <h2>University Projects</h2>
   <div>
     <h3>Year 1 Autonomous car project</h3>
-    <img src="year1.jpg" alt="Year 1 Project" width="400">
+    <img src="Year1.jpg" alt="Year 1 Project" width="400">
   </div>
   <div>
     <h3>Year 2 Whac a mole project</h3>
-    <img src="year2.jpg" alt="Year 2 Project" width="400">
+    <img src="Year2.jpg" alt="Year 2 Project" width="400">
   </div>
   <div>
     <h3>Year 3 Over the board chess AI opponent (ongoing) </h3>
-    <img src="year3.jpg" alt="Year 3 Project" width="400">
+    <img src="Year3.jpg" alt="Year 3 Project" width="400">
   </div>
 </section>
 
