Your commit message

--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
         Over-the-board chess AI opponent
       </li>
       <li>
+        <strong><a href="https://github.com/eddiesc03/rocket">rocket</a></strong><br>
+        Java game 
+      </li>
+      <li>
         <strong><a href="https://eddiesc03.github.io/comicWorld/">comicWorld</a></strong><br>
         Random comics and creative sketches
       </li>
