Your commit message

--- a/index.html
+++ b/index.html
@@ -72,13 +72,15 @@
     <!-- Make sure profile pic.png is in the repo root -->
     <img src="profile pic.png" alt="Edward Collins Profile Picture">
     <h1>Edward Collins</h1>
-    <p>he/him • Liverpool • <a href="mailto:eddiesc03@gmail.com">eddiesc03@gmail.com</a> • <a href="mailto:sgecoll4@liverpool.ac.uk">sgecoll4@liverpool.ac.uk</a></p>
+    <p>He/Him • Liverpool • <a href="mailto:eddiesc03@gmail.com">eddiesc03@gmail.com</a> • <a href="mailto:sgecoll4@liverpool.ac.uk">sgecoll4@liverpool.ac.uk</a></p>
   </header>
 
   <section>
     <h2>About Me</h2>
-    <p>Third-year Computer Science & Electronic Engineering student at the University of Liverpool. 
-       Passionate about autonomous systems, UI/UX design, and creative engineering projects that blend technical rigor with playful design.</p>
+    <p>
+    I am a third-year Computer Science and Electronic Engineering (CSEE) student at the University of Liverpool, with a strong foundation in both hardware and software. Beyond my academic work, I have taken on leadership and community roles, serving as a Peer Assisted Learning (PAL) leader for Electronic Engineering, a course representative for CSEE, and an active member of Electrical Engineering societies. I am passionate about bridging hardware and software to deliver innovative, impactful projects, and I am currently seeking PhD opportunities in Computer Science or Electronic Engineering to further develop my expertise and contribute to technological advancement.
+    </p>
+
   </section>
   
   <section>
@@ -118,7 +120,7 @@
 
   <section>
     <h2>Skills</h2>
-    <p>Python • JavaScript • HTML/CSS • UI/UX Design • Sensor Fusion • Edge AI • Git</p>
+    <p>Python • JavaScript • C++ • ROS • HTML/CSS • UI/UX Design • Sensor Fusion • Edge AI • Git • MatLab • CAD • 3D Printing • Laser Cutting • 3D Printing • Electrical design • </p>
   </section>
 
   <footer>
