Your commit message

--- a/index.html
+++ b/index.html
@@ -69,10 +69,9 @@
 </head>
 <body>
   <header>
-    <!-- Make sure profile pic.png is in the repo root -->
     <img src="profile pic.png" alt="Edward Collins Profile Picture">
     <h1>Edward Collins</h1>
-    <p>He/Him • Liverpool • <a href="mailto:eddiesc03@gmail.com">eddiesc03@gmail.com</a> • <a href="mailto:sgecoll4@liverpool.ac.uk">sgecoll4@liverpool.ac.uk</a></p>
+    <p>He/Him • Liverpool • <a href="mailto:eddiesc03@gmail.com">eddiesc03@gmail.com</a> • <a href="mailto:sgecoll4@liverpool.ac.uk">sgecoll4@liverpool.ac.uk</a> • <a href="https://www.linkedin.com/in/edward-collins-8026ab29a/"> linkdin profile</a></p>
   </header>
 
   <section>
@@ -84,7 +83,7 @@
   </section>
   
   <section>
-  <h2>University Projects</h2>
+  <h2>Projects</h2>
   <div>
     <h3>Year 1 Autonomous car project</h3>
     <img src="Year1.jpg" alt="Year 1 Project" width="400">
@@ -97,11 +96,18 @@
     <h3>Year 3 Over the board chess AI opponent (ongoing) </h3>
     <img src="Year3.jpg" alt="Year 3 Project" width="400">
   </div>
+  </div>
+    <h3> Java based 2D game </h3>
+    <video width="400" controls>
+      <source src="rocket_video.mp4" type="video/mp4">
+      Your browser does not support HTML video.
+    </video>
+  <div>
 </section>
 
 
   <section>
-    <h2>Projects</h2>
+    <h2>GitHub repos</h2>
     <ul>
       <li>
         <strong><a href="https://github.com/eddiesc03/chessbot">chessbot</a></strong><br>
@@ -109,7 +115,7 @@
       </li>
       <li>
         <strong><a href="https://github.com/eddiesc03/rocket">rocket</a></strong><br>
-        Java game 
+        Java 2D rocket control game 
       </li>
       <li>
         <strong><a href="https://eddiesc03.github.io/comicWorld/">comicWorld</a></strong><br>
@@ -120,7 +126,7 @@
 
   <section>
     <h2>Skills</h2>
-    <p>Python • JavaScript • C++ • ROS • HTML/CSS • UI/UX Design • Sensor Fusion • Edge AI • Git • MatLab • CAD • 3D Printing • Laser Cutting • 3D Printing • Electrical design • </p>
+    <p>Python • Java • JavaScript • C++ • ROS • Haskell • HTML/CSS • SQL • Verilog • OpenCV • Assembler • UI/UX Design • AI • Git • MATLAB • CAD • Blender • Gimp • 3D Printing • Laser Cutting • Electrical analysis & design • PCB design • Project management • Software Engineering </p>
   </section>
 
   <footer>
