Your commit message

--- a/index.html
+++ b/index.html
@@ -117,6 +117,15 @@
         <strong><a href="https://github.com/eddiesc03/rocket">rocket</a></strong><br>
         Java 2D rocket control game 
       </li>
+    </ul>
+  </section>
+  <section>
+    <h2>Other creations of mine</h2>
+    <ul>
+      <li>
+        <strong><a href="game.html">Pentris</a></strong><br>
+        A very difficult version of tetris
+      </li>
       <li>
         <strong><a href="https://eddiesc03.github.io/comicWorld/">comicWorld</a></strong><br>
         Random comics and creative sketches
