Your commit message

--- a/index.html
+++ b/index.html
@@ -127,7 +127,11 @@
         A very difficult version of tetris
       </li>
       <li>
-        <strong><a href="https://eddiesc03.github.io/comicWorld/">comicWorld</a></strong><br>
+        <strong><a href="Asteroids_extreme/asteroids.html">Asteroids Extreme</a></strong><br>
+        Want to take the classic arcade game to a new level?
+      </li>
+      <li>
+        <strong><a href="https://eddiesc03.github.io/comicWorld/">Comic World</a></strong><br>
         Random comics and creative sketches
       </li>
     </ul>
